Apply next naming pattern